--- a/app/views/matchDataAction.ejs
+++ b/app/views/matchDataAction.ejs
@@ -16,7 +16,7 @@
 
     <div class="logo-banner row">
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 logo-section-img">
-          <a href="/homePage"><img src="/images/001-shutter.svg"/></a>
+          <a href="/homePage"><img src="/images/001-shutter-name.png"/></a>
         </div>
         <div class="col-lg-8 col-md-7 col-sm-3 col-xs-3">
           <p class="logo-name">Sports Lens</p>
@@ -83,7 +83,7 @@
           </tr>
           
         </tbody>
-      </table>
+    </table>
 </div>
 
 </body>
