--- a/app/views/newTeam.ejs
+++ b/app/views/newTeam.ejs
@@ -16,7 +16,7 @@
 
     <div class="logo-banner row">
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 logo-section-img">
-          <a href="/homePage"><img src="/images/001-shutter.svg"/></a>
+          <a href="/homePage"><img src="/images/001-shutter-name.png"/></a>
         </div>
         <div class="col-lg-8 col-md-7 col-sm-3 col-xs-3">
           <p class="logo-name">Sports Lens</p>
@@ -48,6 +48,14 @@
                 </div>
 
                 <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team Preferred Name:</label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                        <input required name="" type="text" placeholder="Team Preferred Name"
+                        class="input-xlarge form-control" />
+                    </div>
+                </div>
+
+                <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Name:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <input required name="" type="text" placeholder="Coach Name"
@@ -59,14 +67,6 @@
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Analyst Name:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <input required name="" type="text" placeholder="Analyst Name"
-                        class="input-xlarge form-control" />
-                    </div>
-                </div>
-
-                <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Preferred Name:</label>
-                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                        <input required name="" type="text" placeholder="Preferred Name"
                         class="input-xlarge form-control" />
                     </div>
                 </div>
@@ -90,6 +90,16 @@
                             <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                           </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team Country:</label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                        <select required id="" name="" class="input-xlarge form-control">
+                            <option>India</option>
+                            <option>Australia</option>
+                        </select>
                     </div>
                 </div>
 
