--- a/app/views/newTournamentReg.ejs
+++ b/app/views/newTournamentReg.ejs
@@ -17,7 +17,7 @@
 
     <div class="logo-banner row">
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 logo-section-img">
-          <a href="/homePage"><img src="/images/001-shutter.svg"/></a>
+          <a href="/homePage"><img src="/images/001-shutter-name.png"/></a>
         </div>
         <div class="col-lg-8 col-md-7 col-sm-3 col-xs-3">
           <p class="logo-name">Sports Lens</p>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Match Category:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <div>
@@ -110,6 +110,13 @@
                          </div>
                          
                     </div>
+                </div> -->
+
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Teams in the Tournament:</label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                         <textarea required class="form-control input-xlarg team-names" name="" id=""></textarea>
+                    </div>
                 </div>
 
                 <div class="row">
@@ -122,7 +129,7 @@
                 <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">End Date:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                         <input required format="mm-dd-yyyy" id="doj" name="" type="date" class="input-xlarge form-control"/>
+                         <input format="mm-dd-yyyy" id="doj" name="" type="date" class="input-xlarge form-control"/>
                     </div>
                 </div>
 
