--- a/app/views/playerRegistration.ejs
+++ b/app/views/playerRegistration.ejs
@@ -16,7 +16,7 @@
 
     <div class="logo-banner row">
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 logo-section-img">
-          <a href="/homePage"><img src="/images/001-shutter.svg"/></a>
+          <a href="/homePage"><img src="/images/001-shutter-name.png"/></a>
         </div>
         <div class="col-lg-8 col-md-7 col-sm-3 col-xs-3">
           <p class="logo-name">Sports Lens</p>
@@ -40,9 +40,17 @@
                 <h3>New Player Registration</h3>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player Name:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's First Name:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                        <input required name="" type="text" placeholder="Player Name"
+                        <input required name="" type="text" placeholder="Player's First Name"
+                        class="input-xlarge form-control" />
+                    </div>
+                </div>
+
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Last Name:</label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                        <input required name="" type="text" placeholder="Player's Last Name"
                         class="input-xlarge form-control" />
                     </div>
                 </div>
@@ -87,6 +95,23 @@
                             <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                           </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Player's Date of Birth:</label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                         <input required format="mm-dd-yyyy" id="" name="" type="date" class="input-xlarge form-control" />
+                    </div>
+                </div>
+
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Country of Origin:</label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                         <select required id="" name="" class="input-xlarge form-control">
+                            <option>India</option>
+                            <option>Australia</option>
+                        </select>
                     </div>
                 </div>
 
