newmatch page changes
newmatch page changes

--- a/app/views/NewmatchReg.ejs
+++ b/app/views/NewmatchReg.ejs
@@ -358,11 +358,11 @@
 
                                     <tbody>
                                       <tr>
-                                        <td>Virat Kohli</td>
+                                        <td>ply1</td>
                                         <td>
                                             <div class="form-check form-check-inline">
                                                 <label class="form-check-label">
-                                                    <input class="form-check-input" type="checkbox" id="" value="caption">
+                                                    <input class="form-check-input" type="checkbox" id="" value="caption" checked>
                                                 </label>
                                             </div>
                                         </td>
@@ -376,7 +376,7 @@
                                       </tr>
 
                                       <tr>
-                                        <td>MS Dhoni</td>
+                                        <td>ply2</td>
                                         <td>
                                             <div class="form-check form-check-inline">
                                                 <label class="form-check-label">
@@ -387,7 +387,7 @@
                                         <td>
                                             <div class="form-check form-check-inline">
                                                 <label class="form-check-label">
-                                                    <input class="form-check-input" type="checkbox" id="" value="wicketkeeper">
+                                                    <input class="form-check-input" type="checkbox" id="" value="wicketkeeper" checked>
                                                 </label>
                                             </div>
                                         </td>
