--- a/app/views/homePage.ejs
+++ b/app/views/homePage.ejs
@@ -78,6 +78,12 @@
             <h6>Approve Match Score</h6>
           </a>
         </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 nav-options">
+          <a href="/reports">
+            <img src="/images/reports.svg"/>
+            <h6>Reports</h6>
+          </a>
+        </div>
     </div>
 </div>
 
