New changes/Jan7
New changes/Jan7

--- a/app/views/newTournamentReg.ejs
+++ b/app/views/newTournamentReg.ejs
@@ -20,7 +20,7 @@
           <a href="/homePage"><img src="/images/001-shutter-name.png"/></a>
         </div>
         <div class="col-lg-8 col-md-7 col-sm-3 col-xs-3">
-          <p class="logo-name">Sports Lens</p>
+          <p class="logo-name"></p>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 logo-section-img user-section">
           <img src="/images/002-user.svg"/>
@@ -43,7 +43,7 @@
                 <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Name:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                        <input required name="" type="text" placeholder="Player Name"
+                        <input required name="" type="text" placeholder="Tournament Name"
                         class="input-xlarge form-control" />
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                 </div>
 
                 <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Country:</label>
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Country:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <select required id="" name="" class="input-xlarge form-control">
                             <option>India (Country Details From DB)</option>
@@ -141,6 +141,10 @@
         </form>
     </div>
 </div>
+
+<footer class="footer-section">
+    <p>Copyright © 2018 SportsLens</p>
+</footer>
 
 </body>
 </html>
