--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -22,6 +22,9 @@ body {
 .form-control {
   width: 70%; }
 
+.newplayer .form-control {
+  width: 100%; }
+
 .form-content {
   margin: auto;
   margin-top: 40px; }
@@ -172,3 +175,14 @@ table.player-list td, table.player-list th {
   border-top: none;
   padding: .1rem;
   font-size: 12px; }
+
+.footer-section {
+  background: rgba(0, 0, 0, 0.7);
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  color: #9d9d9d;
+  font-size: 15px;
+  bottom: 0px;
+  width: 100%; }
