--- a/app/views/homePage.ejs
+++ b/app/views/homePage.ejs
@@ -20,7 +20,7 @@
           <a href="/homePage"><img src="/images/001-shutter-name.png"/></a>
         </div>
         <div class="col-lg-8 col-md-7 col-sm-3 col-xs-3">
-          <p class="logo-name">Sports Lens</p>
+          <p class="logo-name"></p>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 logo-section-img user-section">
           <img src="/images/002-user.svg"/>
@@ -86,6 +86,10 @@
         </div>
     </div>
 </div>
+
+<footer class="footer-section">
+    <p>Copyright © 2018 SportsLens</p>
+</footer>
 
 </body>
 </html>
