--- a/app/views/newTeam.ejs
+++ b/app/views/newTeam.ejs
@@ -19,7 +19,7 @@
           <a href="/homePage"><img src="/images/001-shutter-name.png"/></a>
         </div>
         <div class="col-lg-8 col-md-7 col-sm-3 col-xs-3">
-          <p class="logo-name">Sports Lens</p>
+          <p class="logo-name"></p>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 logo-section-img user-section">
           <img src="/images/002-user.svg"/>
@@ -59,6 +59,14 @@
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Name:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <input required name="" type="text" placeholder="Coach Name"
+                        class="input-xlarge form-control" />
+                    </div>
+                </div>
+
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Coach Country:</label>
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                        <input required name="" type="text" placeholder="Coach Country"
                         class="input-xlarge form-control" />
                     </div>
                 </div>
@@ -111,6 +119,10 @@
         </form>
     </div>
 </div>
+
+<footer class="footer-section">
+    <p>Copyright © 2018 SportsLens</p>
+</footer>
 
 </body>
 </html>
