--- a/app/views/NewmatchReg.ejs
+++ b/app/views/NewmatchReg.ejs
@@ -92,18 +92,18 @@
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Venue:</label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input disabled name="" type="text" placeholder="" class="input-xlarge form-control" value="Auto Filled" />
+                                <input name="" type="text" placeholder="Venue" class="input-xlarge form-control" value="" />
                             </div>
                         </div>
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Ground:</label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input disabled name="" type="text" placeholder="" class="input-xlarge form-control" value="Auto Filled" />
+                                <input name="" type="text" placeholder="Ground" class="input-xlarge form-control" value="" />
                             </div>
                         </div>
 
-                        <div class="row">
+                        <!-- <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Match Category:</label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                                 <select required id="" name="" class="input-xlarge form-control">
@@ -112,26 +112,26 @@
                                     <option>T20</option>
                                 </select>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Umpire 1:</label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input disabled name="" type="text" placeholder="" class="input-xlarge form-control" value="Auto Filled" />
+                                <input name="" type="text" placeholder="Umpire 1" class="input-xlarge form-control" value="" />
                             </div>
                         </div>
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Umpire 2:</label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input disabled name="" type="text" placeholder="" class="input-xlarge form-control" value="Auto Filled" />
+                                <input name="" type="text" placeholder="Umpire 2" class="input-xlarge form-control" value="" />
                             </div>
                         </div>
 
                         <div class="row">
                             <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Referee:</label>
                             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                                <input disabled name="" type="text" placeholder="" class="input-xlarge form-control" value="Auto Filled" />
+                                <input name="" type="text" placeholder="Referee" class="input-xlarge form-control" value="" />
                             </div>
                         </div>
 
