--- a/app/views/newTeam.ejs
+++ b/app/views/newTeam.ejs
@@ -71,13 +71,13 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Analyst Name:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                         <input required name="" type="text" placeholder="Analyst Name"
                         class="input-xlarge form-control" />
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Team Type:</label>
