--- a/app/views/newTournamentReg.ejs
+++ b/app/views/newTournamentReg.ejs
@@ -69,8 +69,8 @@
                     </div>
                 </div>
 
-                <!-- <div class="row">
-                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Match Category:</label>
+                <div class="row">
+                    <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Tournament Format:</label>
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                          <div>
                              <div class="form-check form-check-inline">
@@ -110,7 +110,7 @@
                          </div>
                          
                     </div>
-                </div> -->
+                </div>
 
                 <div class="row">
                     <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Teams in the Tournament:</label>
