--- a/app/views/NewmatchReg.ejs
+++ b/app/views/NewmatchReg.ejs
@@ -135,6 +135,14 @@
                             </div>
                         </div>
 
+                        <div class="row">
+                            <label class="col-lg-4 col-md-4 col-sm-12 col-xs-12">Analyst Name:</label>
+                            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                                <input required name="" type="text" placeholder="Analyst Name"
+                                class="input-xlarge form-control" />
+                            </div>
+                        </div>
+
                     </div>
 
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 team-details-section">
