--- a/public/scss/style2.scss
+++ b/public/scss/style2.scss
@@ -40,7 +40,7 @@ $table-border: #939393;
             width: $form-layout;
         }
 
-        .newplayer .form-control {
+        .newteam .form-control, .newplayer .form-control {
             width: 100%;
         }
 
