--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -185,4 +185,6 @@ table.player-list td, table.player-list th {
   color: #9d9d9d;
   font-size: 15px;
   bottom: 0px;
-  width: 100%; }
+  width: 100%;
+  position: relative;
+  display: block; }
